# bart

./: CMakeLists.txt  bartwidget.cpp  bartwidget.h  batterywidget.cpp  batterywidget.h  clockwidget.cpp  clockwidget.h  commandwidget.cpp  commandwidget.h  i3pagerwidget.cpp  i3pagerwidget.h  main.cpp  notifywidget.cpp  notifywidget.h  simplewidget.ui
conf/: config  style
